--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1"
 byteorder = "1.2"
 crc = "1.7"
 serde = "1"
 serde_derive = "1"
-serde_json = "1"
 
 [lib]
 name = "libbitdump"
@@ -20,4 +20,6 @@ path = "src/lib.rs"
 name = "bd_mem"
 path = "src/bd_mem.rs"
 
-
+[[bin]]
+name = "bd_disk"
+path = "src/bd_disk.rs"
